<resources>
    <string name="app_name">AplikasiGithubUsers_NavigationApi</string>
    <string name="sample_repo">Repository</string>
    <string name="sample_username">Username</string>
    <string name="sample_fullName">Full Name</string>
    <string name="sample_loc">Location</string>
    <string name="sample_company">Company</string>
    <string name="Detail_User">Detail User</string>
    <string name="List_User">List User</string>
    <string name="title_followers">Followers</string>
    <string name="title_following">Following</string>
    <string name="sample_bio">Bio</string>
    <string name="design_by">Design By</string>
    <string name="nama_ku">lathifatul_chusna</string>
    <string name="hint_search">search username here ...</string>
    <string name="sample_id">ID</string>
    <string name="_100">100</string>
    <string name="_101">101</string>
    <string name="_10">10</string>
    <string name="Favorite_user">Favorite User</string>
    <string name="theme_swicth">Switch Theme</string>
    <string name="search_hint">cari username</string>
    <string name="toast_hint">Maaf username tidak ditemukan...</string>
    <string name="forum_komunitas">Forum Komunitas</string>
    <string name="cari">search</string>
    <string name="status_diskusi">status_diskusi</string>
    <string name="name">name</string>
    <string name="time_upload">waktu upload</string>
    <string name="like">Like</string>
    <string name="comment">comment</string>
    <string name="video_title">video_title</string>
    <string name="menampilkan_vidio_pencarian_anda">Menampilkan vidio pencarian Anda</string>
</resources>