<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ln_item_forum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            tools:src="@tools:sample/avatars"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_diskusi"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_upload"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ln_item_forum">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_like"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="120dp"
            android:layout_weight="1"
            android:src="@drawable/ic_like"
            android:padding="20dp"
            android:backgroundTint="@color/PurpleJanda"
            app:tint="@color/white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/like"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_comment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            app:tint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/comment"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_bookmark"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:backgroundTint="@color/purple_500"
            app:tint="@color/white"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>