<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorOnPrimary"
    tools:context=".activity.DetailUserActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bannerPhoto"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/bg_profile"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewSupporter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_marginBottom="65dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/bannerPhoto"/>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagePhoto"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/app_name"
                tools:src="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cardFollowers"
                app:layout_constraintTop_toBottomOf="@id/viewSupporter"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFollowers"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="18dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="?attr/colorSecondary"
                app:layout_constraintStart_toEndOf="@id/imagePhoto"
                app:layout_constraintTop_toBottomOf="@id/viewSupporter"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_followers"
                            android:textSize="12sp"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tvFollowers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_100"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_following"
                            android:textSize="12sp"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tvFollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_101"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_repo"
                            android:textSize="12sp"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/tvRepository"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_10"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:gravity="center"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardProfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="?attr/colorSecondary"
                app:cardCornerRadius="18dp"
                app:cardElevation="8dp"
                app:layout_constraintTop_toBottomOf="@id/imagePhoto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/profil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="start">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/text_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/sample_fullName"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/text_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/sample_username"
                            android:textSize="12sp"/>
                        <TextView
                            android:id="@+id/text_bio"
                            android:layout_width="350dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="7dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/sample_bio"
                            android:textSize="12sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/text_company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/sample_company"
                            android:textSize="12sp"
                            android:drawableLeft="@drawable/ic_baseline_work"/>
                        <TextView
                            android:id="@+id/text_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="center_vertical"
                            android:text="@string/sample_loc"
                            android:textSize="12sp"
                            android:drawableLeft="@drawable/ic_baseline_home"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardProfil" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpage2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="@id/imagePhoto"
                app:layout_constraintBottom_toBottomOf="@id/imagePhoto"
                app:layout_constraintStart_toStartOf="@id/imagePhoto"
                app:layout_constraintEnd_toEndOf="@id/imagePhoto"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/purple_500"
                android:src="@drawable/ic_favorite"
                app:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>